--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,12 +73,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: kumbh-sans
+      fonts:
+        - asset: assets/fonts/kumbh-sans/KumbhSans-Bold.ttf
+        - asset: assets/fonts/kumbh-sans/KumbhSans-Light.ttf
+        - asset: assets/fonts/kumbh-sans/KumbhSans-Regular.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
